--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -933,11 +933,12 @@ div.game-menu-area {
 
     &>div.ulcont {
       display: inline-block; padding: 0; margin: 0; float: right;
-      position: relative;
+      position: relative; z-index: 1;
     }
 
     &>ul,&>div.ulcont {
       display: inline-block; padding: 0; margin: 0;
+      &.ulcont+.ulcont { margin-right: 4px !important; }
       & li {display: inline-block; list-style: none;}
       &.text-menu {
         background: url("../img/background/menu_metalbg.png") 0 0 repeat-x; height: 32px; padding-left: 32px; padding-right: 6px;
