Added friendlist (#1523) and username tooltip (#1725)

--- a/templates/ajax/game/town/citizen.html.twig
+++ b/templates/ajax/game/town/citizen.html.twig
@@ -66,7 +66,7 @@
                                     </div>
                                 {% endif %}
                             {% endif %}
-                            <a class="link username undecorated{% if citizen == me%} citizen-label-name-me {% endif %}" href="{{ path('soul_visit', {id: citizen.user.id}) }}"><b class="citizen-name">{{ citizen.name }}</b></a>
+                            <a class="link username undecorated{% if citizen == me%} citizen-label-name-me {% endif %}{% if app.user.friends.contains(citizen.user) %} is-friend{% endif %}" x-user-id="{{ citizen.user.id }}"><b class="citizen-name">{{ citizen.name }}</b></a>
                             {% if citizen.alive %}
                                 {% if citizen.banished %}
                                     <img alt="" src="{{ asset('build/images/icons/banished.gif') }}" />
