--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -457,6 +457,10 @@ ul.coa-users {
             padding-left: 5px !important;
             color: #f0d79e !important;
             font-weight: bold !important;
+            &.is-friend {
+                border-top: 1px solid #965c36;
+                background-color: #7e4e2a;
+            }
         }
     }
 }
@@ -511,4 +515,115 @@ ul.coa-users {
 div.death-desc {
     border-right: 1px solid @myhordes-smalltext;
     padding-right: 5px;
+}
+
+div.user-tooltip {
+    position: absolute;
+    z-index: 9999;
+    background-color: #5c2b20;
+    background-image: none;
+    border: 1px solid #ddab76;
+    padding: 10px;
+    width: 230px;
+    min-height: 100px;
+    color: #1d2028;
+    border-radius: 4px;
+    span.link {
+        display: block;
+        color: #ddab76;
+        padding: 1px 10px;
+        margin: 0 -10px;
+        text-decoration: none;
+        font-weight: normal;
+        &:hover {
+            background-color: #79432b;
+        }
+    }
+
+    a[x-action="block_user"],
+    a[x-action="unblock_user"]{
+        font-size: 0.9rem;
+    }
+
+    div.link-blocks {
+        margin-top: 10px;
+        text-align: center;
+        div.link-block {
+            background-color: #79432b;
+            color: #f0d79e;
+            margin: 0 1px 1px 0;
+            padding: 5px 0;
+            width: 65px;
+            height: 50px;
+            text-align: center;
+            display: inline-block;
+            font-size: 1rem;
+            line-height: 1.4rem;
+            overflow: hidden;
+            font-weight: bold;
+            border-radius: 2px;
+            img {
+                width: 16px;
+                height: 16px;
+            }
+            &.empty {
+                border: 1px dashed #ddab76;
+                background: none;
+            }
+            a {
+                text-decoration: none;
+            }
+        }
+    }
+
+    .avatar {
+        img {
+            max-width: 50px !important;
+        }
+        .no-avatar {
+            background: #65382e;
+            cursor: default;
+            overflow: hidden;
+            height: 50px;
+            width: 50px;
+            display: block;
+            color: white;
+            font-size: 25px;
+            line-height: 50px;
+        }
+    }
+
+    div.user-infos {
+        color: #f0d79e;
+    }
+
+    div.userDesc {
+        &::before {
+            margin-top: -10px;
+            left: 44px;
+            background-image: url("../../img/icons/arrowUp.png");
+            content:" ";
+            width: 11px;
+            height: 11px;
+            position: absolute;
+        }
+        font-weight: normal;
+        border-radius: 4px;
+        background-color: #79432b;
+        color: #ddab76;
+        padding: 5px
+    }
+    div.friend-relation {
+        color: white;
+        padding: 0 8px;
+        font-weight: normal;
+        &.not-friend {
+            background-color: #5C0000;
+            border: 1px solid #ddab76;
+        }
+    }
+
+    .row:hover {
+        outline: none !important;
+    }
 }
