--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -590,7 +590,7 @@ ul.list{
       box-shadow: inset 0 1px 2px rgba(0,0,0,0.5), 0 0 1px black;
     }
 
-    &.friend {
+    &.is-friend {
       border-top: 1px solid #965c36;
       background-color: #7e4e2a;
     }
