--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1156,7 +1156,11 @@ span.defense-broken,div.defense-broken { .icon_div("../img/icons/small_def_broke
     .username { 
         text-decoration: none; background-color: #5C0000 !important; border-top: 1px solid #98341c !important;
         border-radius: 4px !important; padding-right: 5px !important; padding-left: 5px !important;
-        color: #f0d79e !important; font-weight: bold !important;
+        color: #f0d79e !important; font-weight: bold !important; cursor: pointer;
+        &.is-friend {
+          border-top: 1px solid #965c36 !important;
+          background-color: #7e4e2a !important;
+        }
       }
     }
 
@@ -1461,6 +1465,10 @@ ul.citizen-list li {
     padding-left: 5px !important;
     color: #f0d79e !important;
     font-weight: bold !important;
+    &.is-friend {
+      border-top: 1px solid #965c36;
+      background-color: #7e4e2a;
+    }
   }
 }
 
