Made the PM button work

--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -450,13 +450,13 @@ ul.coa-users {
         }
         .username { 
             text-decoration: none;
-            background-color: #5C0000 !important;
-            border-top: 1px solid #98341c !important;
-            border-radius: 4px !important;
-            padding-right: 5px !important;
-            padding-left: 5px !important;
-            color: #f0d79e !important;
-            font-weight: bold !important;
+            background-color: #5C0000;
+            border-top: 1px solid #98341c;
+            border-radius: 4px;
+            padding-right: 5px;
+            padding-left: 5px;
+            color: #f0d79e;
+            font-weight: bold;
             &.is-friend {
                 border-top: 1px solid #965c36;
                 background-color: #7e4e2a;
