Improve the tooltip, make the flash msg work

--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -517,7 +517,7 @@ div.death-desc {
     padding-right: 5px;
 }
 
-div.user-tooltip {
+div#user-tooltip {
     position: absolute;
     z-index: 9999;
     background-color: #5c2b20;
@@ -528,6 +528,7 @@ div.user-tooltip {
     min-height: 100px;
     color: #1d2028;
     border-radius: 4px;
+    font-size: 1rem;
     span.link {
         display: block;
         color: #ddab76;
