--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -320,7 +320,7 @@ ul.subscriptions {
     background: linear-gradient(to top, #784a2b, 50%, #965c36);
     &.header-variant-crow { background: rgba(0,0,0,0.3); }
     &.header-variant-dev { background: #006495; }
-    a.link { color: white; text-decoration: none }
+    a.link, span.link { color: white; text-decoration: none }
   }
 
   &.forum-post-search-result>.forum-post-header {
