--- a/templates/ajax/soul/user_tooltip.html.twig
+++ b/templates/ajax/soul/user_tooltip.html.twig
@@ -64,8 +64,7 @@
     </div>
     <div class="cell rw-8 row user-infos">
         <div class="rw-12">{% if user.preferredPronoun == constant("\\App\\Entity\\User::PRONOUN_MALE") %}<img src="{{ asset('build/images/icons/male.png') }}" alt="{{ 'Männlich'|trans({},'global') }}" />{% elseif user.preferredPronoun == constant("\\App\\Entity\\User::PRONOUN_FEMALE") %}<img src="{{ asset('build/images/icons/female.png') }}" alt="{{ 'Weiblich'|trans({},'global') }}" />{% else %}--{% endif %}</div>
-        <div class="rw-12">--</div>
-        <div class="rw-12">--</div>
+        <div class="rw-12">{% if user.language is null %}--{% else %}<img src="{{ asset("build/images/lang/" ~ user.language ~ "_small.png") }}" alt="{{ user.language }}" />{% endif %}</div>
     </div>
 </div>
 {% if not userDesc is null and userDesc != "" %}
@@ -75,7 +74,7 @@
     </div>
 </div>
 {% endif %}
-{% if not isFriend %}
+{% if not isFriend and app.user != user %}
 <div class="friend-relation not-friend mt-1">{{ 'Dieser Spieler gehört nicht zu deinen Kontakten.'|trans({}, 'soul') }}</div>
 {% endif %}
 
