--- a/templates/ajax/forum/posts_small.html.twig
+++ b/templates/ajax/forum/posts_small.html.twig
@@ -55,7 +55,7 @@
                         {% else %}
                             <div class="avatar small ua-{{ random(0,9) }}"><img alt="" src="{{ asset('build/images/forum/empty_avatar.gif') }}"></div>
                         {% endif %}
-                        <b><a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">{{ author_name }} {{ post.translate ? ('') : (_self.icon_master(post.owner))}}:</a></b>
+                        <b><span class="link username{% if app.user.friends.contains(post.owner) %} is-friend{% endif %}" x-user-id="{{ post.owner.id }}">{{ author_name }} {{ post.translate ? ('') : (_self.icon_master(post.owner))}}:</span></b>
                         {{ post.translate ? (post.text|trans({},'game')|raw) : (post.text|raw) }}
                         {% if not post.translate and paranoid and post.owner.name != 'Der Rabe' %}
                             {% set mode = (app.user.id + post.id + post.owner.id) % 12 %}
@@ -85,6 +85,7 @@
 {% block js %}
     {{ parent() }}
     <script>
+        {{ include('scripts/user_tooltip.js.twig') }}
         $.html.forEach('.forum-post-content ul.poll', element => {
             element.parentElement.insertBefore($.html.createElement('<div class="clear" />'),element);
             element.parentElement.insertBefore($.html.createElement('<div class="note note-warning" />', '{{ 'Umfragen können an dieser Stelle nicht angezeigt werden. Bitte besuche das Forum.'|trans({},'global') }}'),element);
