--- a/templates/scripts/user_tooltip.js.twig
+++ b/templates/scripts/user_tooltip.js.twig
@@ -53,7 +53,9 @@ var addActions = function(user_id, target, source){
             function () {
                 $.ajax.load(target, "{{ path('soul_tooltip') }}", false, {'id': user_id}, function(){
                     addActions(user_id, target, source);
-                    source.classList.add("is-friend");
+                    let userElements = document.querySelectorAll('.username[x-user-id="' + user_id + '"]');
+                    for(let i = 0 ; i < userElements.length ; i++)
+                        userElements[i].classList.add("is-friend");
                 });
             });
     });
@@ -63,7 +65,9 @@ var addActions = function(user_id, target, source){
             function () {
                 $.ajax.load(target, "{{ path('soul_tooltip') }}", false, {'id': user_id}, function(){
                     addActions(user_id, target, source);
-                    source.classList.remove("is-friend");
+                    let userElements = document.querySelectorAll('.username[x-user-id="' + user_id + '"]');
+                    for(let i = 0 ; i < userElements.length ; i++)
+                        userElements[i].classList.remove("is-friend");
                 });
             });
     });
