Fix username color

--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -298,6 +298,7 @@ ul.subscriptions {
       &>img { width: 90px !important; height: 30px !important; object-fit: cover }
     }
     margin-bottom: 2px;
+    .username { color: white; text-decoration: none;}
   }
 
   &>.forum-post-header {
