--- a/templates/ajax/game/game.html.twig
+++ b/templates/ajax/game/game.html.twig
@@ -35,6 +35,28 @@
     {% if status is defined %}
         <ul class="status link {% if rucksack is defined %}rucksack_status_union{% endif %}" x-ajax-href="{{ path('help', {'name': 'health'}) }}">
             <li class="text">{{'Status'|trans({}, 'game')}}</li>
+            {% for role in roles %}
+                {# @var role \App\Entity\CitizenRole #}
+                {% if not role.hidden %}
+                    <li class="status{% if role.helpSection is not null %} link{% endif %}" {% if role.helpSection is not null %}x-ajax-href="{{ path('help', {'name': role.helpSection}) }}"{% endif %}>
+                        <img src="{{ asset('build/images/roles/' ~ role.icon ~ '.gif') }}" alt="{{ role.label|trans({},'game') }}">
+                        <div class="tooltip help">
+                            {{ (role.message ?? 'Du bist der {rolename} dieser Stadt.')|trans({'{rolename}': role.label|trans({}, 'game')}, 'game')}}
+                        </div>
+                    </li>
+                {% endif %}
+            {% endfor %}
+            {% if banished %}
+                <li class="status"><img src="{{ asset('build/images/icons/banished.gif') }}" alt="{{ 'Verbannt'|trans({},'game') }}">
+                    <div class="tooltip normal">
+                        <b>{{ 'Verbannt'|trans({},'game') }}</b><br />
+                        {% trans from 'game' %}
+                            Deine Stadt hat entschieden, dich zu verbannen. Einige Aktionen stehen dir nicht länger zur
+                            Verfügung.
+                        {% endtrans %}
+                    </div>
+                </li>
+            {% endif %}
             {% for stat in status %}
                 {# @var stat \App\Entity\CitizenStatus #}
                 {% if not stat.hidden %}
@@ -63,7 +85,21 @@
                     </div>
                 </li>
             {% endif %}
+            {% if roles|filter(r => r.name == "ghoul")|length > 0 %}
+                <li class="status-ghoul {% if hunger > 40 %}warning{% endif %} hide-md hide-sm">
+                    {{ 'Hunger:'|trans({}, 'game') }}
+                    <div class="ghoul-hunger-container">
+                        <div class="ghoul-hunger-background"></div>
+                        <div class="ghoul-hunger-bar {% if hunger > 40 %}warning{% endif %}" style="width: {{ min(100,hunger) }}%"></div>
+                        <div class="ghoul-hunger-indicator" style="left: 40%"></div>
+                    </div>
+                {% if hunger > 40 %}
+                    <div class="ghoul-message"><img src="{{ asset('build/images/icons/warning_anim.gif') }}" alt="/!\"> {{"Du wirst heute Nacht sterben!"|trans({}, 'game')}}</div>
+                {% endif %}
+                </li>
+            {% endif %}
         </ul>
+
     {% endif %}
 
     {% if (ap is defined and max_ap is defined) or (bp is defined and max_bp is defined and max_bp > 0) or (pm is defined and max_pm is defined and max_pm > 0) %}
@@ -124,53 +160,5 @@
         {% endif %}
 
     </div>
-    {% endif %}
-    {% if (banished is defined and banished) or (roles is defined and roles|length > 0) %}
-        <ul class="ulcont">
-            {% for role in roles %}
-                {# @var role \App\Entity\CitizenRole #}
-                {% if not role.hidden %}
-                    <li class="status{% if role.helpSection is not null %} link{% endif %}" {% if role.helpSection is not null %}x-ajax-href="{{ path('help', {'name': role.helpSection}) }}"{% endif %}>
-                        <img src="{{ asset('build/images/roles/' ~ role.icon ~ '.gif') }}" alt="{{ role.label|trans({},'game') }}">
-                        {% if role.name == 'ghoul' %}
-                            <div class="ghoul-hunger-container hide-sm">
-                                <div class="ghoul-hunger-background"></div>
-                                <div class="ghoul-hunger-bar {% if hunger > 40 %}warning{% endif %}" style="width: {{ min(100,hunger) }}%"></div>
-                                <div class="ghoul-hunger-indicator" style="left: 40%"></div>
-                            </div>
-                            {% if hunger > 40 %}
-                                <div class="ghoul-message hide-sm"><img src="{{ asset('build/images/icons/warning_anim.gif') }}" alt="/!\"> {{"Du wirst heute Nacht sterben!"|trans({}, 'game')}}</div>
-                            {% endif %}
-                        {% endif %}
-
-                        <div class="tooltip help">
-                            {{ (role.message ?? 'Du bist der {rolename} dieser Stadt.')|trans({'{rolename}': role.label|trans({}, 'game')}, 'game')}}
-                            {% if role.name == 'ghoul' %}
-                            <br />
-                            <div class="ghoul-hunger-container hide-md hide-lg hide-desktop">
-                                <div class="ghoul-hunger-background"></div>
-                                <div class="ghoul-hunger-bar {% if hunger > 40 %}warning{% endif %}" style="width: {{ min(100,hunger) }}%"></div>
-                                <div class="ghoul-hunger-indicator" style="left: 40%"></div>
-                            </div>
-                            {% if hunger > 40 %}
-                                <div class="ghoul-message hide-lg hide-desktop"><img src="{{ asset('build/images/icons/warning_anim.gif') }}" alt="/!\"> {{"Du wirst heute Nacht sterben!"|trans({}, 'game')}}</div>
-                            {% endif %}
-                            {% endif %}
-                        </div>
-                    </li>
-                {% endif %}
-            {% endfor %}
-            {% if banished %}
-            <li class="status"><img src="{{ asset('build/images/icons/banished.gif') }}" alt="{{ 'Verbannt'|trans({},'game') }}">
-                <div class="tooltip normal">
-                    <b>{{ 'Verbannt'|trans({},'game') }}</b><br />
-                    {% trans from 'game' %}
-                        Deine Stadt hat entschieden, dich zu verbannen. Einige Aktionen stehen dir nicht länger zur
-                        Verfügung.
-                    {% endtrans %}
-                </div>
-            </li>
-            {% endif %}
-        </ul>
     {% endif %}
 {% endblock %}
