Improvements to the player info tooltip

--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -106,3 +106,5 @@ button.button-dropdown-button, div.button.button-dropdown-button, div.forum-butt
 .no-margin {
 	margin: 0;
 }
+
+div.inline { display: inline-block }
