--- a/templates/ajax/forum/posts_small.html.twig
+++ b/templates/ajax/forum/posts_small.html.twig
@@ -42,10 +42,6 @@
                 {% if post.owner.name == 'Der Rabe' %}{% set variant = 'crow' %}
                 {% elseif post.type != "USER" and post.type is not null %}{% set variant = post.type|lower %}{% endif %}
 
-                {% set author_name = town and post.owner.citizenFor(town) ? post.owner.citizenFor(town).name : post.owner.name %}
-                {% if post.owner.name == 'Der Rabe' %}{% set author_name = 'Der Rabe'|trans({},'global') %}
-                {% elseif post.owner.name == 'Animateur-Team' %}{% set author_name = 'Animateur-Team'|trans({},'global') %}{% endif %}
-
                 <div class="forum-post forum-post-small {% if not loop.last %}hide-sm{% endif%} {% if variant is not null %}forum-post-variant-{{ variant }}{% endif %} {% if not post.hidden %}{% else %}forum-post-hidden{% endif %} {% if post.new %}forum-post-new{% endif %} {% if markedPost is defined and post.id == markedPost %}forum-post-marked{% endif %}" id="{{post.id}}">
                     <div class="forum-post-content">
                         {% if post.owner.name == 'Der Rabe' %}
@@ -55,7 +51,7 @@
                         {% else %}
                             <div class="avatar small ua-{{ random(0,9) }}"><img alt="" src="{{ asset('build/images/forum/empty_avatar.gif') }}"></div>
                         {% endif %}
-                        <b><span class="link username{% if app.user.friends.contains(post.owner) %} is-friend{% endif %}" x-user-id="{{ post.owner.id }}">{{ author_name }} {{ post.translate ? ('') : (_self.icon_master(post.owner))}}:</span></b>
+                        {% include 'ajax/soul/playername.html.twig' with {user: post.owner} only %} {{ post.translate ? ('') : (_self.icon_master(post.owner))}}:
                         {{ post.translate ? (post.text|trans({},'game')|raw) : (post.text|raw) }}
                         {% if not post.translate and paranoid and post.owner.name != 'Der Rabe' %}
                             {% set mode = (app.user.id + post.id + post.owner.id) % 12 %}
