--- a/templates/ajax/forum/editor.html.twig
+++ b/templates/ajax/forum/editor.html.twig
@@ -103,7 +103,7 @@
             <div class="padded cell rw-12">
                 {% if type != 'global-pm' %}
                     <label class="small pointer" id="{{ preview_name }}_toggle">{{ 'Vorschau'|trans({},'global') }}</label>
-                    <div id="{{ preview_name }}"></div>
+                    <div translate="no" id="{{ preview_name }}"></div>
                     <br />
                 {% endif %}
                 <label for="{{ type }}-forum-editor-text">{{ 'Deine Nachricht'|trans({},'global') }}</label>
